<resources>
    <string name="app_name">Kool Kidz</string>
    <string name="animal">Animal</string>
    <string name="level_one">Score: 0 Level: 1</string>
    <string name="play_time">Play time!</string>
    <string name="start_quiz">Start quiz</string>
    <string name="calculation">7 * 5 =</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="subtract">-</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="cancel">C</string>
    <string name="delete">AC</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="six">6</string>
    <string name="addition">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="point">.</string>

    <string name="submit">submit</string>
    <string name="hint">"waiting"</string>
    <string name="pass">pass</string>
    <string name="back">⬅</string>
    <string name="done">Done</string>

</resources>