<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Play">

    <!-- Top Display Area -->
    <androidx.cardview.widget.CardView
        android:id="@+id/display_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btb_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvcalculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuzzybubbles_bold"
                android:text="7 + 5 ="
                android:textColor="@color/white"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/display_bg"
                android:enabled="false"
                android:fontFamily="@font/fuzzybubbles_bold"
                android:gravity="center"
                android:hint="?"
                android:inputType="none"
                android:padding="12dp"
                android:textColor="@color/accent_orange"
                android:textSize="32sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Simplified Number Keypad -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="8dp"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/bottom_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_card"
        app:rowCount="5">

        <android.widget.Button
            android:id="@+id/seven"
            style="@style/CalcButtonStyle"
            android:text="@string/seven"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/eight"
            style="@style/CalcButtonStyle"
            android:text="@string/eight"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/nine"
            style="@style/CalcButtonStyle"
            android:text="@string/nine"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/four"
            style="@style/CalcButtonStyle"
            android:text="@string/four"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/five"
            style="@style/CalcButtonStyle"
            android:text="@string/five"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/six"
            style="@style/CalcButtonStyle"
            android:text="@string/six"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/one"
            style="@style/CalcButtonStyle"
            android:text="@string/one"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/two"
            style="@style/CalcButtonStyle"
            android:text="@string/two"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/three"
            style="@style/CalcButtonStyle"
            android:text="@string/three"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/zero"
            style="@style/CalcButtonStyle"
            android:text="@string/zero"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/point"
            style="@style/CalcButtonStyle"
            android:text="@string/point"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <android.widget.Button
            android:id="@+id/clear_btn"
            style="@style/CalcButtonStyle"
            android:backgroundTint="#FF9800"
            android:text="C"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <!-- Bottom Actions -->
    <LinearLayout
        android:id="@+id/bottom_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.widget.Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/btb_background"
            android:backgroundTint="#D32F2F"
            android:fontFamily="@font/fuzzybubbles_bold"
            android:paddingVertical="12dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:background="@drawable/btb_background"
            android:backgroundTint="#388E3C"
            android:fontFamily="@font/fuzzybubbles_bold"
            android:paddingVertical="12dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>